--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "reglex"
 version = "0.1.0"
 edition = "2021"
+description = "A rust lexer generator using regex"
+homepage = "https://github.com/nph278/reglex"
+repository = "https://github.com/nph278/reglex"
+license = "MIT"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
